--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>منصة معسكر 2026 - جامعة أسيوط</title>
+    <title>منصة معسكر 2026</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
@@ -17,10 +17,12 @@
             <p>كلية علوم الرياضة - جامعة أسيوط</p>
         </header>
 
-        <div class="search-container">
+        <div class="search-box">
             <span class="search-icon">🔍</span>
-            <input type="text" id="search_in" placeholder="ابحث عن اسم الطالبة هنا..." onkeyup="start_search()">
+            <input type="text" id="search_in" placeholder="اكتب اسم الطالبة هنا..." onkeyup="start_search()">
         </div>
+        
+        <p style="font-size: 11px; color: #94a3b8; margin-top: -10px;">(اكتب حرفين على الأقل لإظهار النتائج)</p>
 
         <div id="res_area"></div>
     </div>
