--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>منصة معسكر 2026</title>
+    <title>منصة معسكر 2026 - علوم الرياضة</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
@@ -18,16 +18,13 @@
         </header>
 
         <div class="search-box">
-            <span class="search-icon">🔍</span>
-            <input type="text" id="search_in" placeholder="اكتب اسم الطالبة هنا..." onkeyup="start_search()">
+            <span class="search-icon"></span>
+            <input type="text" id="search_in" placeholder="ابحثي عن اسمك هنا..." onkeyup="start_search()">
         </div>
         
-        <p style="font-size: 11px; color: #94a3b8; margin-top: -10px;">(اكتب حرفين على الأقل لإظهار النتائج)</p>
-
         <div id="res_area"></div>
     </div>
 
-    <script src="database.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
