--- a/check.html
+++ b/check.html
@@ -1,31 +1,27 @@
-here<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تأكيد البيانات</title>
     <style>
-        body { font-family: Arial; text-align: center; padding: 40px; background: #f0f0f0; }
-        .box { background: #fff; padding: 25px; border-radius: 12px; border: 2px solid #003366; }
-        .ok { color: green; font-size: 22px; font-weight: bold; }
+        body { font-family: Arial; text-align: center; background: #0f172a; color: white; padding: 50px; }
+        .box { background: white; color: black; padding: 20px; border-radius: 15px; display: inline-block; }
     </style>
 </head>
 <body>
     <div class="box">
-        <div id="out">جاري فحص الكود...</div>
+        <div id="out">جاري التحقق...</div>
     </div>
-    <script src="database.js"></script>
     <script>
+        // هنا نضع نفس مصفوفة الأسماء الموجودة في main.js
+        const _data = [ /* الصق نفس قائمة الأسماء هنا لتعمل الصفحة */ ];
         const p = new URLSearchParams(window.location.search);
         const id = p.get('id');
-        const s = _data_provider.find(x => x._id == id);
+        const s = _data.find(x => x._id == id);
         if (s) {
-            document.getElementById('out').innerHTML = '<div class="ok">✔️ الكود صحيح</div><hr>' +
-                '<p>الاسم: ' + s._n + '</p>' +
-                '<p>المجموعة: ' + s._g + '</p>' +
-                '<p>الحالة: ' + s._s + '</p>';
+            document.getElementById('out').innerHTML = "✔️ تم التحقق بنجاح<hr><p>الاسم: " + s._n + "</p><p>المجموعة: " + s._g + "</p>";
         } else {
-            document.getElementById('out').innerHTML = "❌ كود غير مسجل";
+            document.getElementById('out').innerHTML = "❌ غير مسجل";
         }
     </script>
 </body>
