--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>منصة معسكر 2026 - علوم الرياضة</title>
+    <title>منصة معسكر 2026 - كلية علوم الرياضة</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
@@ -20,7 +20,7 @@
         <div class="search-container">
             <div class="search-box">
                 <span class="search-icon">🔍</span>
-                <input type="text" id="search_in" placeholder="اكتبي الاسم هنا...">
+                <input type="text" id="search_in" placeholder="اكتبي اسم الطالبة هنا...">
             </div>
             <button id="btn_search" onclick="start_search()">ابـحـث الآن</button>
         </div>
