Update title and search input placeholder text

--- a/index.html
+++ b/index.html
@@ -3,31 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>منصة معسكر 2026 - كلية علوم الرياضة</title>
+    <title>منصة معسكر 2026</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 <body>
     <div class="main-w">
         <header>
-            <div class="logo-box">
-                <img src="assets/logo.png" alt="Logo">
-            </div>
             <h1>منصة التحقق الرقمي</h1>
             <p>كلية علوم الرياضة - جامعة أسيوط</p>
         </header>
 
         <div class="search-container">
             <div class="search-box">
-                <span class="search-icon">🔍</span>
-                <input type="text" id="search_in" placeholder="اكتبي اسم الطالبة هنا...">
+                <input type="text" id="search_in" placeholder="اكتبي الاسم هنا...">
             </div>
             <button id="btn_search" onclick="start_search()">ابـحـث الآن</button>
         </div>
         
         <div id="res_area"></div>
     </div>
-
     <script src="main.js"></script>
 </body>
 </html>
