Add inline styles and update search input placeholder

--- a/index.html
+++ b/index.html
@@ -4,25 +4,201 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>منصة معسكر 2026</title>
-    <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <style>
+        :root { --bg: #0f172a; --card: #1e293b; --accent: #00d4ff; }
+        body { background: var(--bg); color: white; font-family: sans-serif; margin: 0; display: flex; justify-content: center; padding: 20px; direction: rtl; }
+        .main-w { width: 100%; max-width: 400px; background: var(--card); padding: 20px; border-radius: 20px; text-align: center; }
+        .search-box { background: white; border-radius: 10px; margin-bottom: 10px; overflow: hidden; }
+        #search_in { width: 100%; border: none; padding: 15px; font-size: 16px; outline: none; text-align: center; color: black; }
+        #btn_search { width: 100%; background: var(--accent); color: black; border: none; padding: 15px; border-radius: 10px; font-weight: bold; cursor: pointer; margin-bottom: 20px; }
+        #res_area { display: flex; flex-direction: column; gap: 10px; }
+        .s_row { background: #334155; padding: 15px; border-radius: 10px; display: flex; justify-content: space-between; align-items: center; width: 100%; box-sizing: border-box; }
+        .s_row button { background: #22c55e; color: white; border: none; padding: 8px 15px; border-radius: 5px; cursor: pointer; }
+        .card-box { background: white; color: black; padding: 20px; border-radius: 15px; border: 4px double #003366; margin-top: 20px; }
+        #canvas { margin: 15px auto; display: flex; justify-content: center; }
+    </style>
 </head>
 <body>
+
     <div class="main-w">
         <header>
             <h1>منصة التحقق الرقمي</h1>
             <p>كلية علوم الرياضة - جامعة أسيوط</p>
         </header>
-
         <div class="search-container">
             <div class="search-box">
-                <input type="text" id="search_in" placeholder="اكتبي الاسم هنا...">
+                <input type="text" id="search_in" placeholder="اكتبي اسم الطالبة هنا...">
             </div>
             <button id="btn_search" onclick="start_search()">ابـحـث الآن</button>
         </div>
-        
         <div id="res_area"></div>
     </div>
-    <script src="main.js"></script>
+
+    <script>
+        // القائمة مرتبة سطر بسطر لسهولة التعديل في GitHub
+        const _data = [
+            { "_id": "1", "_n": "ابرار جمال محمود محمد", "_g": "1" },
+            { "_id": "2", "_n": "ابرار كرم زناتى جابر", "_g": "1" },
+            { "_id": "3", "_n": "ارتينا صليب محبوب ميخائيل", "_g": "1" },
+            { "_id": "4", "_n": "اروى حسن محمد حسن", "_g": "1" },
+            { "_id": "5", "_n": "اروى سيد احمد عليوه", "_g": "1" },
+            { "_id": "6", "_n": "ازهار رفعت عنتر حسين", "_g": "1" },
+            { "_id": "7", "_n": "اسراء اشرف على احمد عبدالرحمن", "_g": "1" },
+            { "_id": "8", "_n": "اسراء رابح عبد الصابر محمود", "_g": "1" },
+            { "_id": "9", "_n": "اسراء سلطان تغيان كامل", "_g": "1" },
+            { "_id": "10", "_n": "اسراء عبدالتواب سيد محمد", "_g": "1" },
+            { "_id": "11", "_n": "اسراء عبدالكريم كيلانى عبدالغنى", "_g": "1" },
+            { "_id": "12", "_n": "اسراء على سيد بدوى", "_g": "1" },
+            { "_id": "13", "_n": "اسراء محمد عبدالمهيمن عبدالله", "_g": "1" },
+            { "_id": "14", "_n": "اسراء مصطفى ابراهيم محمد", "_g": "1" },
+            { "_id": "15", "_n": "اسراء وجيه سيد عباس", "_g": "1" },
+            { "_id": "16", "_n": "اسماء توفيق شفيق توفيق", "_g": "1" },
+            { "_id": "17", "_n": "اسماء جمال عبد الناصر عبد الرحمن", "_g": "1" },
+            { "_id": "18", "_n": "اسماء جمال محمود محمد", "_g": "1" },
+            { "_id": "19", "_n": "اسماء حامد هاشم محمد", "_g": "1" },
+            { "_id": "20", "_n": "اسماء عبد الغني جمعه عثمان", "_g": "1" },
+            { "_id": "21", "_n": "اسماء علاء كامل زكى", "_g": "1" },
+            { "_id": "22", "_n": "اسماء كمال فؤاد توفيق", "_g": "1" },
+            { "_id": "23", "_n": "اسماء كمال محمد على", "_g": "1" },
+            { "_id": "24", "_n": "اسماء محمد سيد حسن", "_g": "1" },
+            { "_id": "25", "_n": "اسماء ناصر فرج الله ابراهيم", "_g": "1" },
+            { "_id": "26", "_n": "آلاء احمد سيد احمد", "_g": "1" },
+            { "_id": "27", "_n": "الاء حماده محمد جابر", "_g": "1" },
+            { "_id": "28", "_n": "الاء سمير رجب ثابت", "_g": "1" },
+            { "_id": "29", "_n": "الاء سيد عبدالنعيم توفيق", "_g": "1" },
+            { "_id": "30", "_n": "الاء صلاح سيد ابراهيم", "_g": "1" },
+            { "_id": "31", "_n": "الاء طارق مصطفى احمد", "_g": "1" },
+            { "_id": "32", "_n": "الاء عبد الناصر محمد ثابت", "_g": "1" },
+            { "_id": "33", "_n": "آلاء عماد سيد عثمان", "_g": "1" },
+            { "_id": "34", "_n": "الاء محمود محمد احمد", "_g": "1" },
+            { "_id": "35", "_n": "الاء مصطفى جاد الكريم رضوان", "_g": "1" },
+            { "_id": "36", "_n": "الهام خلف ثابت حامد", "_g": "1" },
+            { "_id": "37", "_n": "امال جمال جابر محمد", "_g": "1" },
+            { "_id": "38", "_n": "اماني صفوت ابراهيم عبداللطيف", "_g": "1" },
+            { "_id": "39", "_n": "امانى كمال محمد عبدالله", "_g": "1" },
+            { "_id": "40", "_n": "امل عادل ثابت حسن", "_g": "1" },
+            { "_id": "41", "_n": "امنه علاء كمال بدوى", "_g": "1" },
+            { "_id": "42", "_n": "اميره عبد الناصر رشاد عبد الحفيظ", "_g": "1" },
+            { "_id": "43", "_n": "اميره محمد عبد السميع خليل", "_g": "1" },
+            { "_id": "44", "_n": "اميره محمود عثمان عبد اللاه", "_g": "1" },
+            { "_id": "45", "_n": "انجيل عاطف زكريا عطيه", "_g": "1" },
+            { "_id": "46", "_n": "ايمان خالد ثابت حسن", "_g": "1" },
+            { "_id": "47", "_n": "ايمان عاطف عبدالرحيم محمد", "_g": "1" },
+            { "_id": "48", "_n": "ايمان على حسن محمود", "_g": "1" },
+            { "_id": "49", "_n": "ايمان محمد نادى محمد", "_g": "1" },
+            { "_id": "50", "_n": "ايه احمد على على", "_g": "1" },
+            { "_id": "51", "_n": "ايه حسن على حسين", "_g": "1" },
+            { "_id": "52", "_n": "ايه خالد ابراهيم حلمى", "_g": "1" },
+            { "_id": "53", "_n": "ايه خالد ممدوح ابراهيم", "_g": "1" },
+            { "_id": "54", "_n": "ايه طارق كمال همام", "_g": "1" },
+            { "_id": "55", "_n": "ايه طه محمد ابوزيد", "_g": "1" },
+            { "_id": "56", "_n": "ايه عادل خلف الله محمد", "_g": "1" },
+            { "_id": "57", "_n": "ايه عاطف كامل محمود", "_g": "1" },
+            { "_id": "58", "_n": "آيه عماد محمود حلمى", "_g": "1" },
+            { "_id": "59", "_n": "ايه فرج على عبد الحفيظ", "_g": "1" },
+            { "_id": "60", "_n": "ايه كمال ابراهيم احمد", "_g": "1" },
+            { "_id": "61", "_n": "ايه كمال خلف حماد", "_g": "1" },
+            { "_id": "62", "_n": "ايه كمال محمد كمال", "_g": "1" },
+            { "_id": "63", "_n": "ايه محمد ثابت عبد الحكيم", "_g": "1" },
+            { "_id": "64", "_n": "ايه محمود عبد المالك عبد الحافظ", "_g": "1" },
+            { "_id": "65", "_n": "ايه ممدوح محمد طه", "_g": "1" },
+            { "_id": "66", "_n": "ايه نبيل عبد الحكيم على", "_g": "1" },
+            { "_id": "67", "_n": "برسيلا امير رمزى حكيم", "_g": "1" },
+            { "_id": "68", "_n": "بسمله ابراهيم ابوزيد ابراهيم", "_g": "1" },
+            { "_id": "69", "_n": "بسمله جمال عبد الحميد سيد", "_g": "1" },
+            { "_id": "70", "_n": "بسمله حسين محمد حسن", "_g": "1" },
+            { "_id": "71", "_n": "بسمله خلف احمد طه", "_g": "1" },
+            { "_id": "72", "_n": "بسمله طارق محمد محمود", "_g": "1" },
+            { "_id": "73", "_n": "بسمله عاطف عبدالصبور محمد", "_g": "1" },
+            { "_id": "74", "_n": "بسمله عبد الحميد عبد الظاهر عثمان", "_g": "1" },
+            { "_id": "75", "_n": "بسمله علاء الدين محمد عبدالرحمن", "_g": "1" },
+            { "_id": "76", "_n": "بسمله كمال عبد الظاهر رشوان", "_g": "1" },
+            { "_id": "77", "_n": "بسمله محمد عبد اللطيف محمد", "_g": "1" },
+            { "_id": "78", "_n": "بسمه رفعت فؤاد حناوى", "_g": "1" },
+            { "_id": "79", "_n": "بسمه عادل حسين عبد الخير", "_g": "1" },
+            { "_id": "80", "_n": "بسمه محمد حسين محمد", "_g": "1" },
+            { "_id": "81", "_n": "بسمه محمود ايوب حسني", "_g": "1" },
+            { "_id": "82", "_n": "بسنت سيد عبد الحكيم عثمان", "_g": "1" },
+            { "_id": "83", "_n": "بسنت عمرو عباس فرج", "_g": "1" },
+            { "_id": "84", "_n": "بوسى عبد الحكيم على محمد", "_g": "1" },
+            { "_id": "85", "_n": "تاج خالد سعد حسين", "_g": "1" },
+            { "_id": "86", "_n": "تبارك محمد محمود راشد", "_g": "1" },
+            { "_id": "87", "_n": "تسنيم احمد كمال صديق", "_g": "1" },
+            { "_id": "88", "_n": "تسنيم عمران نادى على", "_g": "1" },
+            { "_id": "89", "_n": "تسنيم محمد ثابت محمد", "_g": "1" },
+            { "_id": "90", "_n": "تهاني جمال عامر محمد", "_g": "1" },
+            { "_id": "91", "_n": "جاسكا عصام حنا عزيز", "_g": "1" },
+            { "_id": "92", "_n": "جاسى مجدى راوف وليم", "_g": "1" },
+            { "_id": "93", "_n": "جاسيكا نشأت جيد مكاري", "_g": "1" },
+            { "_id": "94", "_n": "جهاد سعيد محمود متولي", "_g": "1" },
+            { "_id": "95", "_n": "جوليا عادل حسان ميخائيل", "_g": "1" },
+            { "_id": "96", "_n": "جومانه طارق فاروق رمضان", "_g": "1" },
+            { "_id": "97", "_n": "جومانه محمد فارس نمرعلى", "_g": "1" },
+            { "_id": "98", "_n": "جيسيكا زكريا نعيم سليمان", "_g": "1" },
+            { "_id": "99", "_n": "جيسيكا علاء عبده توفيق", "_g": "1" },
+            { "_id": "100", "_n": "جيهان صابر حسن محمد", "_g": "1" },
+            { "_id": "101", "_n": "حبيبة علاء محمد امين", "_g": "1" },
+            { "_id": "102", "_n": "حبيبه ابراهيم محمد ابراهيم", "_g": "1" },
+            { "_id": "103", "_n": "حبيبه اشرف محمد عبدالجواد", "_g": "1" },
+            { "_id": "104", "_n": "حبيبه ايمن فاروق احمد", "_g": "1" },
+            { "_id": "105", "_n": "حبيبه جمال عبد الناصر سيد", "_g": "1" },
+            { "_id": "106", "_n": "حبيبه حسن صابر حسن", "_g": "1" },
+            { "_id": "107", "_n": "حبيبه حماده احمد محمد", "_g": "1" },
+            { "_id": "108", "_n": "حبيبه سيد محمود احمد", "_g": "1" },
+            { "_id": "109", "_n": "حبيبه عادل ثابت عثمان", "_g": "1" },
+            { "_id": "110", "_n": "حبيبه عبدالرحيم محمد عبدالرحيم", "_g": "1" },
+            { "_id": "111", "_n": "حبيبه علاء الدين جابر حسين", "_g": "1" },
+            { "_id": "112", "_n": "حبيبه علاء كامل كمال", "_g": "1" },
+            { "_id": "113", "_n": "حبيبه على كمال زكى", "_g": "1" },
+            { "_id": "114", "_n": "حبيبه عماد سيد محمد", "_g": "1" },
+            { "_id": "115", "_n": "حبيبه عماد عبدالعظيم بدوى", "_g": "1" },
+            { "_id": "116", "_n": "حبيبه كمال ممدوح كمال", "_g": "1" },
+            { "_id": "117", "_n": "حبيبه محمد ابراهيم احمد", "_g": "1" },
+            { "_id": "118", "_n": "حبيبه محمد خلف على", "_g": "1" },
+            { "_id": "119", "_n": "حبيبه محمد سيد عبد الجابر", "_g": "1" },
+            { "_id": "120", "_n": "حبيبه ناصر خلف احمد", "_g": "1" },
+            { "_id": "121", "_n": "حبيبه وليد طه ثابت", "_g": "1" },
+            { "_id": "122", "_n": "حسناء رجب ابراهيم محمد", "_g": "1" }
+        ];
+
+        function normalize(t) {
+            return t.replace(/[أإآ]/g, 'ا').replace(/ة/g, 'ه').replace(/ى/g, 'ي').trim();
+        }
+
+        function start_search() {
+            const val = document.getElementById('search_in').value;
+            const res = document.getElementById('res_area');
+            res.innerHTML = "";
+            if (!val.trim()) { alert("اكتبي الاسم أولاً"); return; }
+            const cleanInput = normalize(val);
+            let found = false;
+            _data.forEach(item => {
+                if (normalize(item._n).includes(cleanInput)) {
+                    found = true;
+                    const row = document.createElement('div');
+                    row.className = 's_row';
+                    row.innerHTML = `<span>${item._n}</span><button onclick="showCard('${item._n}','${item._id}','${item._g}')">عرض</button>`;
+                    res.appendChild(row);
+                }
+            });
+            if (!found) res.innerHTML = "الاسم غير موجود";
+        }
+
+        function showCard(n, i, g) {
+            document.getElementById('res_area').innerHTML = `
+                <div class="card-box">
+                    <h3>جامعة أسيوط</h3>
+                    <div id="canvas"></div>
+                    <b>${n}</b><br>
+                    <small>مجموعة: ${g} | كود: ${i}</small>
+                </div>
+                <button onclick="location.reload()" style="margin-top:20px; padding:10px; cursor:pointer;">بحث جديد</button>`;
+            new QRCode(document.getElementById("canvas"), {
+                text: "https://nasser.github.io/camp/check.html?id=" + i,
+                width: 150, height: 150
+            });
+        }
+    </script>
 </body>
 </html>
